--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <h1>Semana 10</h1>
-        <h2>Scripts Externos</h2>
+        <h2>Scripts Internos</h2>
     </header>
     <main>
         <section id="formulario">
